# MemDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose-simple-cluster.yml  main.cpp  run-simple-cluster.sh
core/: .gitignore  .linux-build.sh.swp  CMakeLists.txt  Dockerfile  Dockerfile-base  Dockerfile-core  README.md  build-and-run.sh  build-docker-container.sh  build-docker-image-base.sh  build-docker-image-core.sh  build-docker-image.sh  debug.sh  linux-build.sh  run.sh
core/CMake/: cotire.cmake
core/libs/googletest/docs/: faq.md  gmock_faq.md  gmock_for_dummies.md  primer.md
core/playground/: CMakeLists.txt  ignore.txt  main.cpp
core/src/: CMakeLists.txt  MemDb.cpp  MemDb.h  MemDbCreator.cpp  MemDbCreator.h  main.cpp  memdbtypes.h  shared.h
core/src/auth/: AuthenticationType.h  Authenticator.cpp  Authenticator.h
core/src/cluster/: Cluster.cpp  Cluster.h  ClusterCreator.h  ClusterDbNodeChangeHandler.h  GetClusterConfigResponse.cpp  GetClusterConfigResponse.h  Node.cpp  Node.h  NodeState.cpp  NodeState.h  PendingReplicationOperationBuffer.cpp  PendingReplicationOperationBuffer.h
core/src/cluster/changehandler/: ClusterDbNodeChangeHandler.h  ClusterNodeChangeHandler.h
core/src/cluster/clusterdb/: ClusterDb.cpp  ClusterDb.h  ClusterDbValueChanged.cpp  ClusterDbValueChanged.h
core/src/cluster/clustermanager/: ClusterManagerService.cpp  ClusterManagerService.h
core/src/cluster/hints/: HintIterator.cpp  HintIterator.h  HintsService.cpp  HintsService.h
core/src/cluster/othernodes/: ClusterNodes.cpp  ClusterNodes.h  MultipleResponse.cpp  MultipleResponses.cpp  MultipleResponses.h  NodeGroup.cpp  NodeGroup.h  NodeGroupOptions.h  NodePartitionOptions.h  NodesInPartition.cpp  NodesInPartition.h  SendRequestOptions.h
core/src/cluster/partitions/: PartitionNeighborsNodesGroupSetter.cpp  PartitionNeighborsNodesGroupSetter.h  PartitionNeighborsNodesSetter.cpp  PartitionNeighborsNodesSetter.h  Partitions.cpp  Partitions.h  RIngEntries.cpp  RingEntries.cpp  RingEntries.h  RingEntry.cpp  RingEntry.h
core/src/cluster2/: Cluster.h
core/src/config/: ConfiguartionLoader.cpp  Configuration.cpp  Configuration.h  ConfigurationLoader.cpp  ConfigurationLoader.h
core/src/db/: AVLTree.h  DbEditResult.h  Map.h  MapEntry.h  MemDbStores.cpp  MemDbStores.h  NodeType.h
core/src/logging/: Logger.cpp  Logger.h
core/src/operators/: AllOperators.cpp  AllOperators.h  ControlOperator.h  DbOperator.h  DbOperatorExecutor.h  DelayedOperationsBuffer.cpp  DelayedOperationsBuffer.h  MaintenanceOperatorExecutor.h  OperationOptions.h  Operator.h  OperatorDIsptacher.cpp  OperatorDependencies.h  OperatorDispatcher.cpp  OperatorDispatcher.h  OperatorNumbers.h  OperatorProperty.h  OperatorRegistry.cpp  OperatorRegistry.h
core/src/persistence/: .OperationLogDiskWriter.h.swp  MultipleOperationLog.cpp  MultipleOperationLog.h  MultithreadedLogCompactor.h  OperationLog.h  OperationLogBuffer.cpp  OperationLogBuffer.h  OperationLogCompacter.h  OperationLogDeserializer.cpp  OperationLogDeserializer.h  OperationLogDiskLoader.cpp  OperationLogDiskLoader.h  OperationLogDiskLoader2.h  OperationLogDiskWriter.cpp  OperationLogDiskWriter.h  OperationLogInvalidator.cpp  OperationLogInvalidator.h  OperationLogSerializer.cpp  OperationLogSerializer.h  OperationLogUtils.cpp  OperationLogUtils.h  OplogIterator.cpp  OplogIterator.h  OplogSegmentIterator.cpp  OplogSegmentIterator.h  SingleOperationLog.cpp  SingleOperationLog.h
core/src/replication/: ClusterDbNodeChangeHandler.h  ClusterManagerService.h  Node.h  NodeState.h  Replication.h  ReplicationCreator.h  ReplicationNode.h  ReplicationNodeStarter.h  ReplicationOperationBuffer.h
core/src/server/: Connection.cpp  Connection.h  TCPServer.cpp  TCPServer.h
core/src/users/: Authenticator.h  UsersRepository.cpp  UsersRepository.h
core/src/utils/: Iterator.h  Utils.cpp  Utils.h
core/src/virtualnode/: VirtualNode.h
core/tst/: Assertions.h  CMakeLists.txt  other.txt
core/tst/auth/: AuthenticatorTest.cpp
core/tst/cluster/: ClusterTest.h
core/tst/operators/: OperatorDisptacherTest.cpp  OperatorRegistryTest.cpp
core/tst/persistence/: OperationLogDeserializerTest.cpp  OperationLogSerializerTest.cpp
core/tst/utils/: UtilsTest.cpp
sheduler/: go.mod
src/: CMakeLists.txt  MemDb.h  MemDbCreator.h  main.cpp
src/config/: Configuration.h  ConfigurationLoader.h  DefaultConfig.txt  DefaultConfiguration.h
src/config/keys/: ConfiguartionKeys.cpp  ConfiguartionKeys.h  ConfigurationKeys.cpp  ConfigurationKeys.h  DefaultConfig.h
src/connection/: Connection.h  TCPConnection.h  TCPServer.cpp  TCPServer.h
src/database/operators/: AllOperators.h  GetOperator.h  Operator.h  OperatorDispatcher.h  OperatorRegistry.h  SetOperator.h
src/messages/: Message.h  MessageParser.h
src/messages/request/: Request.h  RequestDeserializer.h  ResponseParser.h
src/messages/response/: ErrorCode.h  ErrorCodes.h  Response.h  ResponseSerializer.h
src/operators/: AllOperators.h  OperationOptions.h  Operator.h  OperatorDispatcher.h
src/operators/buffer/: OperationLogBuffer.h
src/operators/operations/: DeleteOperator.h  GetOperator.h  SetOperator.h
src/persistence/: OperationLog.h  OperationLogBuffer.h  OperationLogDeserializer.h  OperationLogDiskLoader.h  OperationLogDiskWriter.h  OperationLogSaver.h  OperationLogSerializer.h
src/replication/: ReplicationNode.h
src/server/: TCPServer.h
src/users/: Authenticator.h  User.h  UsersService.cpp  UsersService.h
src/utils/: DBMap.cpp  DBMap.h  DBMap.hpp  HashCreator.hpp  PolynomialHashCreator.cpp  PolynomialHashCreator.h  Utils.h
src/utils/benchmark/: ScopeTimer.h  Timer.h
src/utils/clock/: LamportClock.h
src/utils/crypto/: PolynomialHashCreator.cpp  PolynomialHashCreator.h
src/utils/datastructures/: DBMap.cpp  DBMap.h  Map.h
src/utils/files/: FIleUtilsInclude.h  FileReader.h  FileUtils.cpp  FileUtils.h  FileUtilsWindows.cpp  FileWriter.h
src/utils/memory/: NoDeallocator.h
src/utils/strings/: SimpleString.h  SmallString.h  StringUtils.h
src/utils/threads/: CachedThreadPool.h  Exchanger.h
(+662 files in other folders)
